--- a/src/pkg1proyecto/Vista.form
+++ b/src/pkg1proyecto/Vista.form
@@ -28,7 +28,7 @@
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="98" max="32767" attributes="0"/>
+              <EmptySpace pref="39" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="Producto" min="-2" max="-2" attributes="0"/>
                   <Component id="TipoPago" min="-2" max="-2" attributes="0"/>
@@ -43,7 +43,7 @@
               </Group>
               <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="pagar" min="-2" max="-2" attributes="0"/>
+                  <Component id="Pagar" min="-2" max="-2" attributes="0"/>
                   <Component id="email" max="32767" attributes="0"/>
                   <Component id="id" alignment="0" pref="154" max="32767" attributes="0"/>
               </Group>
@@ -75,19 +75,19 @@
                   <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="43" max="32767" attributes="0"/>
-              <Component id="pagar" min="-2" max="-2" attributes="0"/>
+              <Component id="Pagar" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JButton" name="pagar">
+    <Component class="javax.swing.JButton" name="Pagar">
       <Properties>
         <Property name="text" type="java.lang.String" value="pagar"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pagarActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PagarActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="TipoPago">
@@ -95,18 +95,20 @@
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="2">
             <StringItem index="0" value="fisico"/>
-            <StringItem index="1" value=" "/>
+            <StringItem index="1" value="Libro"/>
           </StringArray>
         </Property>
+        <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
     </Component>
     <Component class="javax.swing.JComboBox" name="Producto">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="3">
+          <StringArray count="4">
             <StringItem index="0" value="libro"/>
             <StringItem index="1" value="video"/>
             <StringItem index="2" value="membresia"/>
+            <StringItem index="3" value="Actualizar Membres&#xed;a"/>
           </StringArray>
         </Property>
       </Properties>
